@@ -60,7 +60,7 @@
 </figure>
 <p>The <strong>ZMQ Stream</strong> image source frame contains the following fields:</p>
 <ul class="simple">
-<li><p><strong>ZMQ Server:</strong> selects the zmq server host and zmq  data port. Moreover the user can also select the required zmq topic and ZMQ HWM (how many images is in buffer), i.e. <cite>host:port[/topic[/HWM]]</cite></p></li>
+<li><p><strong>ZMQ Server:</strong> selects the zmq server host and zmq  data port. Moreover the user can also select the required zmq topic and ZMQ HWM (how many images is in buffer), i.e. <cite>host:port[:topic[:HWM]]</cite></p></li>
 <li><p><strong>DataSource:</strong> name of zmq topic. Possible datasources can be predefined in the configuration or sent in ZMQ metadata.</p></li>
 <li><p><strong>Status:</strong> shows the connection status. It also displays a port of ZMQ security stream if it is enabled.</p></li>
 <li><p><strong>Start/Stop</strong> button to launch or interrupt image querying</p></li>
