@@ -1793,10 +1793,19 @@ class ZMQSource(BaseSource):
         """ connects the source
         """
         try:
-            shost = str(self._configuration).split("/")
-            host, port = str(shost[0]).split(":")
-            self.__topic = tobytes(shost[1] if len(shost) > 1 else "")
-            hwm = int(shost[2]) if (len(shost) > 2 and shost[2]) else 2
+            conf = self._configuration.split(":")
+            host = conf[0]
+            port = conf[1]
+            if len(conf) > 2:
+                self.__topic = tobytes(conf[2])
+            else:
+                self.__topic == b""
+
+            if len(conf) > 3:
+                hwm = int(conf[3])
+            else:
+                hwm = 2
+
             if not self._initiated:
                 if self.__socket:
                     self.disconnect()
@@ -1813,7 +1822,6 @@ class ZMQSource(BaseSource):
                     self.__socket.setsockopt(zmq.SUBSCRIBE,
                                              self.__topic)
                     self.__socket.setsockopt(zmq.SUBSCRIBE, b"datasources")
-                    # self.__socket.setsockopt(zmq.SUBSCRIBE, "")
                     self.__socket.connect(self.__bindaddress)
                 time.sleep(0.2)
             return True
